CSV File Upload Endpoint

--- a/backend/tcs-integration/tcs-integration.csproj
+++ b/backend/tcs-integration/tcs-integration.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\tcs-service\tcs-service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="test-utils/**/*.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
